php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #27681 soap extension fails without HAVE_TM_GMTOFF
Submitted: 2004-03-24 16:43 UTC Modified: 2004-04-15 16:14 UTC
From: jwm at horde dot net Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5.0.0RC1 OS: Solaris 8
Private report: No CVE-ID: None
 [2004-03-24 16:43 UTC] jwm at horde dot net
Description:
------------
The soap extension fails to build (undefined variables) 
on Solaris 8 because the !HAVE_TM_GMTOFF case requires 
tzone, which is not defined. This (perhaps naive) patch 
fixes the build, but I haven't tested it:

--- ext/soap/php_encoding.c~    2004-03-20 17:10:
22.646093000 -0500
+++ ext/soap/php_encoding.c     2004-03-20 17:10:
22.656085000 -0500
@@ -2119,6 +2119,7 @@
        size_t buf_len=64, real_len;
        char *buf;
        char tzbuf[6];
+       long tzone;
 
        xmlNodePtr xmlParam;
 
@@ -2130,7 +2131,13 @@
                timestamp = Z_LVAL_P(data);
                ta = php_localtime_r(&timestamp, 
&tmbuf);
                /*ta = php_gmtime_r(&timestamp, &tmbuf);
*/
-
+#if !HAVE_TM_GMTOFF
+#ifdef __CYGWIN__
+               tzone = _timezone;
+#else
+               tzone = timezone;
+#endif
+#endif
                buf = (char *) emalloc(buf_len);
                while ((real_len = strftime(buf, 
buf_len, format, ta)) == buf_len || real_len == 0) {
                        buf_len *= 2;


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-04-07 11:16 UTC] sniper@php.net
Assigned to the maintainer.
 [2004-04-15 06:30 UTC] dmitry@php.net
Fixed in 5.0.0RC2-dev CVS.
Please, verify me on Solaris.
 [2004-04-15 16:14 UTC] jwm at horde dot net
The soap extension builds successfully under Solaris 
now. Thanks, Dmitry.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC