Fixed bug #27681 (soap extension fails without HAVE_TM_GMTOFF).